# calendar-waybar

./: Cargo.toml
src/: main.rs
