[package]
name = "calendar-waybar"
version = "0.1.0"
authors = ["Daniel Phan <danielphan.2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
serde_json = "1.0.57"

[[bin]]
name = "calendar-waybar"
path = "src/main.rs"
